crates/rskim-proxy/tests/compile_fail/ac24_proxy_provider_exhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/compile_fail/ac24_proxy_provider_exhaustive_match.rs:15:11
   |
15 |     match p {
   |           ^ pattern `_` not covered
   |
note: `ProxyProvider` defined here
  --> src/detect.rs
   |
   | pub enum ProxyProvider {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ProxyProvider`
   = note: `ProxyProvider` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
19 ~         ProxyProvider::Unknown => "unknown",
20 ~         _ => todo!(),
   |
